--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-
-# Created by https://www.gitignore.io/api/elm
-
-### Elm ###
-# elm-package generated files
-elm-stuff
-# elm-repl generated files
-repl-temp-*
-
-
-# End of https://www.gitignore.io/api/elm
+/bower_components/
+/node_modules/
+/.pulp-cache/
+/output/
+/generated-docs/
+/.psc-package/
+/.psc*
+/.purs*
+/.psa*
 .DS_Store
+assets
