--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/jcouyang/boss#readme",
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "echarts": "^4.1.0"
+    "browserify": "^16.2.2",
+    "echarts": "^4.1.0",
+    "ramda": "^0.25.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "whatwg-fetch": "^2.0.4"
   }
 }
