--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "md5": "^2.2.1",
     "ramda": "^0.25.0",
     "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
-    "whatwg-fetch": "^2.0.4"
+    "rxjs-compat": "^6.2.1"
   }
 }
