--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "echarts": "^4.1.0",
     "md5": "^2.2.1",
     "ramda": "^0.25.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1"
+    "rxjs-compat": "^6.2.1",
+    "watchify": "^3.11.0"
+  },
+  "devDependencies":{
+    "react-scripts": "1.1.4"
   }
 }
