--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "bootstrap": "^4.1.1",
     "browserify": "^16.2.2",
     "echarts": "^4.1.0",
+    "envify": "^4.1.0",
     "md5": "^2.2.1",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
-    "watchify": "^3.11.0"
+    "watchify": "^3.11.0",
+    "whatwg-fetch": "^2.0.4"
   },
-  "devDependencies":{
-    "react-scripts": "1.1.4"
+  "devDependencies": {
+    "react-scripts": "1.1.4",
+    "serv": "^0.2.4"
   }
 }
