--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^16.2.2",
     "echarts": "^4.1.0",
     "envify": "^4.1.0",
+    "jquery": "^3.3.1",
     "md5": "^2.2.1",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
