--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "envify": "^4.1.0",
     "jquery": "^3.3.1",
     "md5": "^2.2.1",
+    "mustache": "^2.3.0",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
