--- a/management/package.json
+++ b/management/package.json
@@ -9,6 +9,7 @@
     "react-router5": "^6.0.4",
     "react-scripts": "1.1.4",
     "router5": "^6.2.4",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1"
   },
   "scripts": {
