--- a/management/package.json
+++ b/management/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://boss.51dianxiaoge.com/management",
   "dependencies": {
+    "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router5": "^6.0.4",
