--- a/management/package.json
+++ b/management/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://boss.51dianxiaoge.com/management",
   "dependencies": {
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
