--- a/management/package.json
+++ b/management/package.json
@@ -23,5 +23,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "npm:enzyme-react-adapter-future",
+    "react-test-renderer": "^16.4.1"
   }
 }
